# fitnudge

./: .easignore  .gitignore  .npmrc  FITNUDGE_SPEC.md  IMPLEMENTATION_SUMMARY.md  PRE_LAUNCH_TODOS.md  README.md  credentials.sh  eas.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/admin-api/: README.md  celery_worker.py  main.py  pyproject.toml
apps/admin-api/app/: __init__.py
apps/admin-api/app/api/: router.py
apps/admin-api/app/core/: admin_auth.py  celery_client.py  config.py  create_admin.py  database.py  middleware.py  security_config.py
apps/admin-api/app/services/: __init__.py  data_export_service.py  email_service.py  notification_service.py
apps/api/: .gitignore  README.md  celery_worker.py  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  main.py  newrelic.ini  pyproject.toml  requirements.txt  test_catchup.py  test_push.sh
apps/api/app/core/: analytics.py  api_keys.py  auth.py  cache.py  celery_app.py  celery_signals.py  config.py  daily_motivation_styles.py  database.py  entity_validation.py  flexible_auth.py  health.py  middleware.py  notifications.py  security_config.py  security_utils.py  subscriptions.py
apps/api/app/models/: suggested_goals.py
apps/api/app/services/: achievement_condition_checker.py  achievement_service.py  ai_coach_service.py  ai_coach_stream_service.py  ai_coach_tools.py  ai_insights_service.py  ai_progress_reflections_service.py  challenge_service.py  checkin_service.py  cleanup_service.py  email_service.py  exercise_service.py  expo_push_service.py  feature_inventory.py  goal_type_suggestion_service.py  live_activity_service.py  logger.py  meal_tracking_service.py  motivation_service.py  nextup_fcm_service.py  openai_service.py  partner_matching_service.py  plan_generator.py  push_motivation_generator.py  referral_service.py  social_accountability_service.py  social_notification_service.py  subscription_service.py  suggested_goals_service.py  task_queue.py  tasks.py  weekly_recap_service.py
apps/api/certs/: SSO_Ouath.p8
apps/api/data/: exerciseData_complete.json
apps/api/docs/: REDIS_SETUP.md  SECURITY.md  TIMEZONE_AWARE_CHECKINS.md
apps/api/scripts/: import_exercises.py  run_celery_worker.py  run_generate_weekly_recaps.py  sync_users_to_auth.py  test_checkin_notification.py  test_weekly_recap.py  trigger_checkin_creation.py
apps/api/supabase/: config.toml
apps/api/supabase/.temp/: pooler-url  project-ref
apps/api/supabase/migrations/: 001_initial_schema.sql  002_rls_policies.sql  002_social_features.sql  003_ai_features.sql  003_realtime_setup.sql  004_complete_schema.sql  004_infrastructure.sql  005_seed_data.sql  006_rls_policies.sql  007_streak_tracking.sql  008_recap_and_goal_insights.sql  009_adaptive_nudging.sql  010_voice_notes.sql  011_user_reports.sql  012_analytics_rpc.sql  013_notification_preferences_update.sql  014_private_analytics_schema.sql  015_partner_metadata.sql  020_app_config.sql  (+135 more)
apps/api/tests/: __init__.py  conftest.py  test_achievements.py  test_app_config.py  test_auth.py  test_checkins.py  test_goals.py  test_health.py  test_home.py  test_notifications.py  test_onboarding.py  test_partners.py  test_referral.py  test_referral_bonus.py  test_subscriptions.py  test_users.py
(+1013 files in other folders)
